# franka-arm-mpc

./: .gitignore  CMakeLists.txt  Franka_arm_MPC.cpp  Optimizer.cpp  Optimizer.h  README.md  config.cmake.example  kinematics.cpp  kinematics.h  setup.bat  setup.sh
